Small fixes part2